# engineering-board

./: .gitignore  .mcp.json  ACTIVATION.md  ARCHITECTURE.md  BRAND-COHERENCE.md  BRAND.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COLOR.md  COMPREHENSION.md  CONTRIBUTING.md  CRO.md  FIXLOG.md  HIERARCHY.md  IMPROVEMENTS.md  LAYOUT.md  LICENSE  NEXT-PHASE.md  PROOF.md  README.md  RETENTION.md  ROADMAP.md  SECURITY.md  SHOWCASE.md  STATES.md  TYPOGRAPHY.md  board.html  state.md
.claude-plugin/: marketplace.json  plugin.json
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: metrics.yml  pages.yml  release.yml  test.yml
.goal/: BLOCKERS.md  FINAL_REPORT.md  LAUNCH.md  LOOP_PROGRESS.md  NEXT_GOAL_IMPROVEMENT_LOOP.md  POSITIONING.md  PRODUCT_FACTS.md  PROGRESS.md
.goal/evidence/: G0-test-suite.txt  (+10 more)
agents/: board-manager.md  code-reviewer.md  consolidator.md  finding-extractor.md  learnings-curator.md  tdd-builder.md  tidier.md  validator.md
brand/: tokens.css
commands/: board-claim-release.md  board-graph.md  board-init.md  board-install-permissions.md  board-migrate.md  board-pause.md  board-rebuild.md  board-remember.md  board-resume.md  board-run.md  board-setup.md  board-view.md  pm-start.md  worker-start.md
docs/: index.html  llms.txt  metrics.csv
engineering-board/: BOARD-ROUTER.md
hooks/: hooks.json  stop-hook-procedure.md
mcp-server/: README.md  build-mcpb.sh  engineering_board_mcp.py  manifest.json  pyproject.toml  run-tests.sh  server.json  smithery.yaml  test_mcp_server.py
references/: active-workers-registry.md  auto-resolve-pass.md  required-permissions.json
specs/: board-relocation.md  competitive-parity-build.md
tests/: crosscompat-lint.sh  docs-coherence.sh  lint-orchestrator-prompts.sh  run-all.sh  token-coherence.sh  version-coherence.sh
(+272 files in other folders)
